[project]
name = "synthesis_arkhai"
version = "0.1.0"
description = "An escrow-ready agreement layer that turns natural-language grant or service terms into verifiable release checkpoints."
readme = "README.md"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.13"
